# sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  builtin.rs  config.rs  main.rs  paths.rs  plugin.rs  registry.rs  sdk.rs  shell.rs  util.rs
