[package]
name = "sdk"
version = "0.5.5"
edition = "2021"
description = "A fast, cross-platform SDK version manager (Rust port of vfox)"
license = "Apache-2.0"

[[bin]]
name = "sdk"
path = "src/main.rs"

[dependencies]
# CLI argument parsing + shell completions
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Lua runtime for plugin execution (Lua 5.4, vendored, with serde support)
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"] }

# HTTP client (blocking only, no async needed for CLI tool)
# rustls-tls avoids OpenSSL C dependency, making cross-compilation easier
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TOML config parsing/writing
toml = "0.8"

# Progress bars for downloads
indicatif = "0.17"

# Colored terminal output
colored = "2"

# System directory detection
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "1"

# Checksums (RustCrypto)
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"

# Archive extraction
flate2 = "1"
tar = "0.4"
zip = "2"

# File walking
walkdir = "2"

# HTML parsing for plugin web scraping support
scraper = "0.22"

# YAML config parsing
serde_yaml = "0.9"
# static feature compiles liblzma from source — required for cross-compilation
xz2 = { version = "0.1.7", features = ["static"] }

# Interactive prompts / TUI selection
dialoguer = { version = "0.11", features = ["fuzzy-select"] }


[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows registry for global PATH persistence
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
